2004-06-08  Jakub Steiner <jimmac@ximian.com>

	* my-computer.svg
	* gnome-terminal.svg: scale fixups

	* accessibility-directory.svg
	* gnome-games.svg: new panel icons

2004-05-05 Christian Schaller <Uraeus@gnome.org>

	* Fixing small issues in Nuvola
	* Adding OpenOffice icons to Nuvola apps directory
	* Give printermanager a Nuvola icon
	* Add sodipodi/inkscape icon to theme
	* Fixed translations

2004-05-03 Christian Schaller <Uraeus@gnome.org>

	* Tons of bugfixes from Josselin Mouette <joss@debian.org>
	* Firefox icon from Tobias Jakobs
	* Suse symlinks from James Ogley
	* Disable translations, they currently break the build

2004-04-19 Christian Schaller <Uraeus@gnome.org>
	
	* Released 0.7

2004-04-18 David Vignoni <davigno@cvs.gnome.org>

	* Nuvola/icons/scalable/stock/: Updated 15 icons.
	* Nuvola/icons/scalable/stock/: Added 1 icons.
	

2004-04-10  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-31 Christian Schaller <Uraues@gnome.org>

	* Added two more icons to Amaranth

2004-03-30 Christian Schaller <Uraeus@gnome.org>

	* Added 5 icons to Amaranth
	* Added new Nuvola icons to Makefiles

2004-03-30 David Vignoni  <davigno@cvs.gnome.org>

	* Nuvola/icons/scalable/apps/: Updated 16 icons.
	* Nuvola/icons/scalable/apps/: Added 3 icons.
	* Nuvola/icons/scalable/devices/: Updated 10 icons.
	* Nuvola/icons/scalable/devices/: Added 1 icon.
	* Nuvola/icons/scalable/emblems/: Updated 6 icons.
	* Nuvola/icons/scalable/filesystems/: Updated 19 icons.
	* Nuvola/icons/scalable/mimetypes/: Updated 5 icons.
	* Nuvola/icons/scalable/mimetypes/: Added 1 icon.	

2004-03-29 David Vignoni <davigno@cvs.gnome.org>

	* Nuvola/icons/scalable/mimetypes/: Updated 30 icons.
	* Nuvola/icons/scalable/mimetypes/: Added 22 icons.

2004-03-27  Christian Schaller <Uraeus@gnome.org>

	* Add patch to Industrial from Morten Welinder
	  Fixes issue for Gnumeric and probably others

2004-03-21  Christian Schaller <Uraeus@gnome.org>
