@@ -24,3 +24,13 @@ icon_DATA = \
         gnome-fs-web.svg \
         $(NULL)
 EXTRA_DIST = $(icon_DATA)
+
+
+install-data-local:
+	mkdir -p $(DESTDIR)$(icondir)
+	cd $(DESTDIR)$(icondir) && \
+	ln -sf $(DESTDIR)$(datadir)/icons/Gorilla/scalable/apps/my-computer.svg \
+	$(DESTDIR)$(icondir)/gnome-fs-client.svg
+
+uninstall-local:
+	rm -rf $(DESTDIR)$(icondir)/gnome-fs-client.svg
